kubernetes/apps/home/home-assistant/app/ingress-code.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-code
  annotations:
    external-dns/is-public: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    hajimari.io/enable: "true"
    hajimari.io/appName: "HASS-Code"
    hajimari.io/group: "home"
    hajimari.io/icon: mdi:microsoft-visual-studio-code
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-internal-default-noauth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "kaseihu-code.${SECRET_DOMAIN}"
      secretName: "kaseihu-code.${SECRET_DOMAIN//./-}-prod-tls"
  rules:
    - host: kaseihu-code.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  number: 12321
